Migrate to Spring Boot 3, Flyway, and jakarta.*
Replace manual MVC/JPA config with Spring Boot autoconfiguration, add Flyway V1 schema, Spring Security with CSRF, and Thymeleaf under classpath templates. Book listing uses Page<Book>; search uses title contains; assign uses personId with validation; book detail loads owner via join fetch; people books endpoint returns 404 when person is missing. Update tests (H2 profile, DataJpaTest) and README; local secrets via application-local.yml example.

Made-with: Cursor